kubernetes/bases/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minecharts-api-strip
spec:
  stripPrefix:
    prefixes:
      - /api
