kubernetes/bases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: minecharts-api-strip@kubernetescrd
  name: minecharts
spec:
  rules:
    - host: minecharts.example.com # change to your public host
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: minecharts-api
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minecharts-web
                port:
                  number: 80
  tls:
    - hosts:
        - minecharts.example.com
      # secretName: minecharts-example-com-tls
